# grafial

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DOC_ANALYSIS.md  ENGINE_ARCHITECTURE.md  IR_MIGRATION_STATUS.md  LANGUAGE_GUIDE.md  LICENSE  PHASE5_STATISTICAL_REVIEW.md  Python_Plan.md  README.md  REVIEW.md  ROADMAP.md  Rust_Best_Practices.md  SECURITY.md  TECHNICAL_REVIEW_REPORT.md  baygraph_design.md  baygraph_roadmap.md  competing_edges_design.md  performance_ideas.md  setup-coverage.sh  shell.nix
.github/workflows/: phase6-release-gate.yml  release.yml
benches/: graph_benchmarks.rs
crates/grafial-benches/: Cargo.toml
crates/grafial-benches/benches/: backend_spike.rs  graph_benchmarks.rs
crates/grafial-cli/: Cargo.toml
crates/grafial-core/: Cargo.toml  build.rs
crates/grafial-core/benches/: numeric_kernels.rs  parallel_execution.rs  vectorized_evidence.rs
crates/grafial-core/src/: lib.rs
crates/grafial-core/src/engine/: adjacency_index.rs  aot_flows.rs  aot_integration.rs  arena_allocator.rs  belief_propagation.rs  errors.rs  evidence.rs  expr_eval.rs  expr_utils.rs  flow_exec.rs  graph.rs  jit_backend.rs  mod.rs  model_selection.rs  numeric_kernels.rs  parallel_evidence.rs  parallel_flow.rs  parallel_graph.rs  parallel_metrics.rs  parallel_rules.rs  query_plan.rs  rule_exec.rs  rule_kernels.rs  snapshot.rs  vectorized.rs
crates/grafial-core/src/metrics/: mod.rs
crates/grafial-core/src/storage/: mod.rs
crates/grafial-core/tests/: aot_flows_test.rs  rule_kernels_test.rs  vectorized_parity.rs
crates/grafial-examples/: ab_testing.grafial  advanced_metrics.grafial  common_mistakes.grafial  competing_choices.grafial  minimal.grafial  pipeline_composition.grafial  prior_sensitivity.grafial  probabilistic_pattern_matching.grafial  social.grafial  soft_vs_hard_updates.grafial  transitive_closure.grafial  uncertainty_propagation.grafial
crates/grafial-frontend/: Cargo.toml  grammar.pest
crates/grafial-frontend/src/: ast.rs  errors.rs  lib.rs  lint.rs  mod.rs  parser.rs  style.rs  validate.rs
crates/grafial-ir/: Cargo.toml
crates/grafial-ir/src/: evidence.rs  expr.rs  flow.rs  lib.rs  mod.rs  optimize.rs  program.rs  rule.rs
crates/grafial-lsp/: Cargo.toml  README.md
crates/grafial-lsp/src/: main.rs
crates/grafial-python/: .gitignore  BUILD_AND_DISTRIBUTE.md  Cargo.toml  QUICKSTART.md  README.md  pyproject.toml
crates/grafial-python/src/: lib.rs
crates/grafial-python/tests/: _helpers.py  test_api_surface.py  test_basic.py  test_competing_groups.py  test_evidence_merge.py  test_evidence_modes_and_chaining.py  test_flow_minimal.py  test_graph_views_and_exports.py  test_pipeline_metrics.py
crates/grafial-tests/: Cargo.toml
crates/grafial-tests/tests/: bayesian_updates_tests.rs  competing_edges_tests.rs  evidence_building_tests.rs  examples_tests.rs  exists_subquery_tests.rs  integration_tests.rs  parallel_execution_test.rs  phase4_exit_criteria.rs  phase6_release_gate.rs  property_tests.rs
crates/grafial-tests/tests/integration/: engine_tests.rs  expression_tests.rs  flow_tests.rs  parser_tests.rs  rule_where_tests.rs  snapshot_tests.rs
crates/grafial-tests/tests/unit/: grammar_debug.rs  parser_error_tests.rs
crates/grafial-vscode/: .npmignore  .vscodeignore  CURSOR_SETUP.md  DEBUG_LSP.md  QUICKSTART.md  QUICK_TEST.md  README.md  TESTING_STEPS.md  TROUBLESHOOTING.md  extension.js  grafial-0.1.0.vsix  language-configuration.json  package-lock.json  package.json  webpack.config.js
crates/grafial-vscode/syntaxes/: grafial.tmLanguage.json
documentation/: BUILDING.md  ENGINE_ARCHITECTURE.md  LANGUAGE_GUIDE.md  MIGRATION_GUIDE.md  PHASE10_BACKEND_RESULTS.md  PHASE10_BACKEND_SPIKE.md  PHASE12_PARALLEL_EXECUTION.md  PYTHON_PLAN.md  README.md  ROADMAP.md  WIP-LANGUAGE-REDESIGN.md  final-language-implementation-roadmap.md  final-language-suggestions.md  llvm-optimization-guide.md  phase10_backend_results.json
examples/: README.md  ab_testing.bg  advanced_metrics.bg  common_mistakes.bg  common_mistakes.grafial  competing_choices.bg  debug_social.rs  minimal.bg  prior_sensitivity.bg  probabilistic_pattern_matching.bg  social.bg  soft_vs_hard_updates.bg  transitive_closure.grafial  uncertainty_propagation.bg
grafial-vscode/: .vscodeignore  LSP_PLAN.md  grafial-0.1.0.vsix  install-cursor.sh
grafial-vscode/syntaxes/: grafial.tmLanguage.json
grammar/: baygraph.pest  grafial.pest
scripts/: phase10_backend_matrix.sh  phase10_backend_spike.sh  phase6_release_gate.sh  set_version.sh
src/: lib.rs
src/bindings/: mod.rs
src/engine/: errors.rs  evidence.rs  expr_eval.rs  expr_utils.rs  flow_exec.rs  graph.rs  mod.rs  query_plan.rs  rule_exec.rs  snapshot.rs
src/frontend/: ast.rs  mod.rs  parser.rs  validate.rs
src/ir/: flow.rs  mod.rs  program.rs  rule.rs
src/metrics/: mod.rs
src/storage/: mod.rs
tests/: competing_edges_tests.rs  evidence_building_tests.rs  exists_subquery_tests.rs  integration_tests.rs  phase4_exit_criteria.rs  property_tests.rs
tests/integration/: engine_tests.rs  expression_tests.rs  flow_tests.rs  parser_tests.rs  rule_where_tests.rs  snapshot_tests.rs
tests/unit/: grammar_debug.rs  parser_error_tests.rs
