[package]
name = "baygraph"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bayesian Belief Graph DSL and engine"
repository = ""
keywords = ["bayesian", "graph", "dsl"]
categories = ["science", "parsing"]

[features]
default = []
tracing = ["dep:tracing"]
serde = ["dep:serde", "dep:serde_json", "dep:bincode"]
rayon = ["dep:rayon"]

[dependencies]
thiserror = "1"
pest = "2"
pest_derive = "2"
smallvec = "1.13"
rustc-hash = "1"
tracing = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
bincode = { version = "1", optional = true }
rayon = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_benchmarks"
harness = false
