[workspace]
members = [
    "crates/grafial-core",
    "crates/grafial-frontend",
    "crates/grafial-ir",
    "crates/grafial-cli",
    "crates/grafial-python",
    "crates/grafial-tests",
    "crates/grafial-benches",
    "crates/grafial-lsp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""
keywords = ["bayesian", "graph", "dsl"]
categories = ["science", "parsing"]

[workspace.dependencies]
thiserror = "1"
pest = "2"
pest_derive = "2"
smallvec = "1.13"
rustc-hash = "1"
lazy_static = "1.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
cranelift-codegen = "0.125"
cranelift-frontend = "0.125"
cranelift-jit = "0.125"
cranelift-module = "0.125"
cranelift-native = "0.125"

[workspace.dependencies.pretty_assertions]
version = "1"

[workspace.dependencies.proptest]
version = "1"

[workspace.dependencies.criterion]
version = "0.5"
features = ["html_reports"]
