[package]
name = "grafial-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Performance benchmarks for Grafial"

[[bench]]
name = "graph_benchmarks"
path = "benches/graph_benchmarks.rs"
harness = false

[dependencies]
grafial-core = { path = "../grafial-core", features = ["serde"] }
grafial-frontend = { path = "../grafial-frontend" }
criterion.workspace = true
