[package]
name = "grafial-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Performance benchmarks for Grafial"

[[bench]]
name = "graph_benchmarks"
path = "benches/graph_benchmarks.rs"
harness = false

[[bench]]
name = "backend_spike"
path = "benches/backend_spike.rs"
harness = false

[dependencies]
grafial-core = { path = "../grafial-core", features = ["serde"] }
grafial-frontend = { path = "../grafial-frontend" }
criterion.workspace = true
serde.workspace = true
serde_json.workspace = true
