[package]
name = "grafial-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for Grafial Bayesian belief graphs"

[dependencies]
grafial-frontend = { path = "../grafial-frontend" }
grafial-ir = { path = "../grafial-ir" }
thiserror.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing"]
serde = ["dep:serde", "dep:serde_json"]
bincode = ["dep:bincode", "serde"]
rayon = ["dep:rayon"]
