[package]
name = "grafial-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20"
grafial-frontend = { path = "../grafial-frontend" }
pest = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

