[package]
name = "grafial-lsp"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20"
grafial-frontend = { path = "../grafial-frontend" }
pest = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
