[package]
name = "grafial-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for Grafial"

[lib]
name = "grafial"
crate-type = ["cdylib", "rlib"]
test = false

[dependencies]
grafial-core = { path = "../grafial-core" }
grafial-frontend = { path = "../grafial-frontend" }
pyo3 = { workspace = true, features = ["auto-initialize"] }

[features]
default = []
