[package]
name = "grafial-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Integration and unit tests for Grafial"

[features]
default = []
parallel = ["grafial-core/parallel"]
serde = ["grafial-core/serde"]

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "competing_edges_tests"
path = "tests/competing_edges_tests.rs"

[[test]]
name = "evidence_building_tests"
path = "tests/evidence_building_tests.rs"

[[test]]
name = "exists_subquery_tests"
path = "tests/exists_subquery_tests.rs"

[[test]]
name = "phase4_exit_criteria"
path = "tests/phase4_exit_criteria.rs"

[[test]]
name = "phase6_release_gate"
path = "tests/phase6_release_gate.rs"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[[test]]
name = "examples_tests"
path = "tests/examples_tests.rs"

[dependencies]
grafial-core = { path = "../grafial-core", features = ["serde"] }
grafial-frontend = { path = "../grafial-frontend" }
rustc-hash.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
